# discord-sales-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  consts.py  docker-compose.yml  kong_helpers.py  kongs.py  main.py  opensea.py  pyproject.toml  run.sh  sneakers.py
src/: consts.py  kongs.py  main.py  opensea.py  rookies.py  sales_bot.py  sneakers.py  util.py
src/collections/: kongs.py  rookies.py  sneakers.py
src/sales_since/: 0.json  1.json  2.json
